--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bankin-test",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -16,8 +16,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "openurl": "^1.1.1",
-    "request-promise-native": "1.0.8",
-    "request": "2.88.0"
+    "request": "2.88.0",
+    "request-promise-native": "1.0.8"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
